--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <div class="gamescreen">
+            <h1>Flower Hangman</h1>
             Hits: <div id="word-holder"></div>
             <br><hr><br>
             Misses: <div id="miss-holder"></div>
